# elly_videoplayer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ResultToExample.bat  SConstruct  build.bat  build.ninja  build_all.bat  build_windows.bat  cmake_install.cmake  compile_commands.json  install_manifest.txt  pull_submodule.bat
src/: CMakeLists.txt  DecodeConfig.h  DecoderFFmpeg.cpp  DecoderFFmpeg.h  FFmpegNode.cpp  FFmpegNode.h  FFmpegVideoPlayer.cpp  FFmpegVideoPlayer.hpp  Makefile  README.md  cmake_install.cmake  my_node.hpp  register_types.cpp
src/ffmpeg/doc/: ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-scaler.html  ffplay-all.html  ffprobe-all.html  general.html
src/ffmpeg/include/libavutil/: ffversion.h
src/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
src/libavcodec/: 8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_parser.d  aacenc_is.d  aacenc_ltp.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr.d  aactab.d  ac3_channel_layout_tab.d  ac3_parser.d  ac3enc_fixed.d  ac3tab.d  acelp_pitch_delay.d  adts_parser.d  agm.d  alac.d  alac_data.d  alacenc.d  aliaspixdec.d  aliaspixenc.d  alsdec.d  anm.d  ansi.d  apac.d  aptx.d  aptxdec.d  aptxenc.d  arbc.d  ass.d  ass_split.d  asvdec.d  atrac.d  atrac1.d  atrac3.d  atrac3plusdec.d  atrac3plusdsp.d  audio_frame_queue.d  (+422 more)
src/libavcodec/libavfilter/: af_acopy.d  af_adelay.d  af_adenorm.d  af_adrc.d  af_adynamicsmooth.d  af_aexciter.d  af_afftdn.d  af_afir.d  af_aformat.d  af_amerge.d  af_anlms.d  af_asetrate.d  af_astats.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  af_compand.d  af_compensationdelay.d  af_crossfeed.d  af_earwax.d  af_flanger.d  af_haas.d  af_mcompand.d  af_pan.d  af_silenceremove.d  af_superequalizer.d  af_tremolo.d  af_vibrato.d  asrc_afirsrc.d  avf_a3dscope.d  avf_abitscope.d  avf_ahistogram.d  avf_avectorscope.d  avf_showfreqs.d  avf_showwaves.d  avfilter.d  buffersrc.d  colorspace.d  drawutils.d  (+87 more)
src/libavcodec/libavfilter/dnn/: dnn_backend_native.d  dnn_backend_native_layer_avgpool.d  dnn_backend_native_layer_conv2d.d  dnn_backend_native_layer_depth2space.d  dnn_backend_native_layer_mathunary.d  dnn_interface.d  dnn_io_proc.d  queue.d  safe_queue.d
src/libavcodec/libavfilter/x86/: af_volume.d  avf_showcqt.d  scene_sad.d  (+21 more)
src/libavcodec/libavformat/: 4xm.d  aacdec.d  aadec.d  act.d  adtsenc.d  aiff.d  aiffdec.d  aiffenc.d  aixdec.d  allformats.d  amr.d  apac.d  apngdec.d  apngenc.d  aqtitledec.d  argo_brp.d  asfcrypt.d  assdec.d  assenc.d  async.d  avc.d  avienc.d  avr.d  avs.d  binka.d  brstm.d  cafdec.d  cdg.d  cinedec.d  concat.d  crcenc.d  crypto.d  dash.d  dauddec.d  dfpwmdec.d  dsicin.d  dvbsub.d  dvenc.d  file.d  filmstripdec.d  (+96 more)
src/libavcodec/libavutil/: audio_fifo.d  blowfish.d  bprint.d  dovi_meta.d  downmix_info.d  encryption_info.d  fifo.d  film_grain_params.d  frame.d  hdr_dynamic_vivid_metadata.d  hmac.d  hwcontext.d  hwcontext_d3d11va.d  hwcontext_stub.d  libavutil.pc  log.d  mathematics.d  md5.d  samplefmt.d  slicethread.d  spherical.d  twofish.d  tx.d  tx_float.d  version.d
src/libavcodec/libswresample/: libswresample.version  resample.d
src/libavcodec/x86/: aacencdsp.d  aacpsdsp.d  alacdsp.d  audiodsp.d  blockdsp.d  bswapdsp.d  cavsdsp.d  cfhdencdsp.d  constants.d  dirac_dwt.d  exrdsp.d  fft.d  fft_init.d  flac_dsp_gpl.d  flacencdsp_init.d  fmtconvert.d  h264_idct.d  h264_idct_10bit.d  h264_intrapred.d  h264_intrapred_10bit.d  h264_qpel.d  h264_qpel_10bit.d  h264_weight_10bit.d  hevc_add_res.d  hevc_idct.d  hevcdsp_init.d  hpeldsp.d  hpeldsp_init.d  hpeldsp_vp3.d  idctdsp.d  jpeg2000dsp.d  lossless_audiodsp.d  lossless_videodsp.d  lossless_videodsp_init.d  lossless_videoencdsp_init.d  lpc.d  me_cmp.d  mpeg4videodsp.d  mpegvideo.d  mpegvideoenc.d  (+32 more)
src/libavformat/: 3dostr.d  a64.d  adp.d  ads.d  apm.d  asf_tags.d  asfdec_f.d  au.d  avformat.d  avidec.d  avio.d  aviobuf.d  bethsoftvid.d  bit.d  boadec.d  cafenc.d  cavsvideodec.d  cdxl.d  concatdec.d  dashenc.d  dcstr.d  demux.d  demux_utils.d  dfa.d  diracdec.d  dovi_isom.d  dss.d  dump.d  dvbtxt.d  ffmetaenc.d  fitsenc.d  flac_picture.d  flacdec.d  flacenc.d  flvenc.d  framehash.d  frmdec.d  fsb.d  g723_1.d  hashenc.d  (+96 more)
src/libavutil/: .gitignore  adler32.d  ambient_viewing_environment.d  avsscanf.d  csp.d  dict.d  fixed_dsp.d  imgutils.d  integer.d  libavutil.version  mastering_display_metadata.d  murmur3.d  parseutils.d  pixdesc.d  rational.d  sha512.d  tx_int32.d  xga_font_data.d  xtea.d
src/libavutil/x86/: float_dsp.d  lls_init.d  pixelutils.d  timer.h  tx_float.d
src/libswresample/: audioconvert.d  dither.d  libswresample.pc  options.d  resample_dsp.d  swresample.d  swresample_frame.d  version.d
src/libswresample/x86/: rematrix_init.d
src/libswscale/: alphablend.d  half2float.d  hscale.d  options.d  output.d  rgb2rgb.d  slice.d  utils.d  yuv2rgb.d
src/libswscale/x86/: input.d  output.d  scale_avx2.d  yuv2rgb.d  yuv2yuvX.d
src/src/: AVDecoderHandler.cpp  AVDecoderHandler.h  AVHandler.cpp  AVHandler.h  DecodeConfig.h  DecoderFFmpeg.cpp  DecoderFFmpeg.h  FFmpegMediaEncoder.cpp  FFmpegMediaEncoder.h  FFmpegMediaPlayer.cpp  FFmpegMediaPlayer.h  FFmpegNode.cpp  FFmpegNode.h  IDecoder.h  Logger.cpp  Logger.h  MediaDecoderUtility.cpp  MediaDecoderUtility.h  MediaInfoUtility.cpp  MediaInfoUtility.h  VRVideoFilter.cpp  VRVideoFilter.h  ViveMediaDecoder.cpp  ViveMediaDecoder.h  register_types.cpp  register_types.h
src/src/decoder/: AVDecoderHandler.cpp  AVDecoderHandler.h  DecoderFFmpeg.cpp  DecoderFFmpeg.h  IDecoder.h
src/src/encoder/: IEncoder.h
src/src/gd/: FFmpegMediaPlayer.cpp  FFmpegMediaPlayer.h  register_types.cpp
src/src/godot/: FFmpegMediaPlayer.h  register_types.cpp
src/src/interface/: MediaDecoderUtility.cpp  MediaDecoderUtility.h  MediaEncoderUtility.h  MediaInfoUtility.cpp
src/src/node/: FFmpegMediaEncoder.h  FFmpegMediaPlayer.cpp  VRVideoFilter.h
src/src/unity/: FFmpegMediaPlayer.cpp  FFmpegMediaPlayer.h  Logger.h  UnityInterface.cpp  UnityInterface.h
(+1282 files in other folders)
